--- a/djangoweb/website/templates/website/partials/_header.html
+++ b/djangoweb/website/templates/website/partials/_header.html
@@ -38,7 +38,19 @@
                     </li>
                 {% endif %}
             {% endfor %}
-        </ul> 
+        </ul>
+        
+        <!-- SOCIAL MEDIA MOBILE -->
+
+        <div class="header-socials">
+            <a href="https://www.instagram.com/gazilequipamentos?igsh=MXhmamZ5ZmdhYjc1aA%3D%3D&utm_source=qr" target="_blank" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/share/1FqVLHRSGZ/?mibextid=wwXIfr" target="_blank" aria-label="Facebook">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+        </div>
+
     </nav>
 
     <!-- Menu Mobile -->
