--- a/djangoweb/website/templates/website/partials/_head.html
+++ b/djangoweb/website/templates/website/partials/_head.html
@@ -10,3 +10,4 @@
 <title>{{ site_setup.title }}</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@glidejs/glide/dist/css/glide.core.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
