Creation of the Footer Section & Adjustment in the whatsapp icon

--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -5,8 +5,10 @@
     --color-light: #ECECEC;          /* Fundos claros */
     --color-white: #FAFAFA;
     --color-gray: #8D99AE;
+    --color-md-gray: #979797;
     --color-dark-gray: #555;         /* Bordas, textos secundários */
     --color-dark: #1e1e1e;
+    --color-whatsapp: #128C7E;
 
     /* FONTES */
 
@@ -70,11 +72,15 @@ a {
 /* ======= WHATSAPP ICON ======== */
 .whatsapp-float{
     position: fixed;
-    width: 80px;
-    height: 80px;
-    bottom: 80px;
-    right: 30px;
+    width: 100px;
+    height: 100px;
+    bottom: 100px;
+    right: 60px;
     z-index: var(--z-whatsapp);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     cursor: pointer;
     transition: transform 0.3s ease;
 }
@@ -86,7 +92,64 @@ a {
 }
 
 .whatsapp-float:hover{
-    transform: scale(1.1);
+    transform: scale(1.05);
+}
+
+@keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.15); }
+    100% { transform: scale(1); }
+}
+
+.whatsapp-float.pulse {
+    animation: pulse 1.6s ease-in-out 3;
+}
+
+.whatsapp-tooltip{
+    position: absolute;
+    bottom: 95%;
+    left: 50%;
+    width: max-content;
+    transform: translateX(-50%) translateY(10px);
+    background-color: var(--color-whatsapp);
+    color: var(--color-white);
+    padding: var(--space-sm) var(--space-md);
+    border-radius: var(--border-radius);
+    font-size: 1rem;
+    font-family: var(--font-body);
+    box-shadow: var(--shadow-md);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.4s ease, transform 0.4s ease;
+    z-index: var(--z-whatsapp);
+}
+
+.whatsapp-tooltip.show{
+    opacity: 1;
+    transform: translateX(-50%) translateY(0);
+}
+
+.whatsapp-tooltip::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 6px;
+    border-style: solid;
+    border-color: var(--color-whatsapp) transparent transparent transparent;
+}
+
+.whatsapp-tooltip span{
+    display: inline-block;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+.whatsapp-tooltip span.show{
+    opacity: 1;
+    transform: translateY(0);
 }
 
 /* ===========   HEADER   ============ */
@@ -326,6 +389,10 @@ a {
     padding: var(--space-xs) 0;
     color: var(--color-gray);
     transition: color 0.3s;
+}
+
+.nav-mobile .dropdown-menu a:hover{
+    color: var(--color-dark);
 }
 
 
@@ -589,6 +656,107 @@ a {
     line-height: 1.5;
 }
 
+/* ======= FOOTER ======== */
+
+.footer{
+    background-color: var(--color-dark);
+    color: var(--color-md-gray);
+    padding: var(--space-xl) var(--space-md) var(--space-md);
+    font-size: 1rem;
+    font-family: var(--font-body);
+}
+
+.footer-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: var(--space-lg);
+}
+
+.footer-col h3 {
+    font-family: var(--font-title);
+    color: var(--color-light);
+    margin-bottom: var(--space-sm);
+    font-size: 1.5rem;
+}
+
+.footer-logo-img{
+    width: 120px;
+    height: auto;
+    margin: auto;
+}
+
+.footer-logo{
+    font-size: 1.5rem;
+    font-family: var(--font-title);
+    color: var(--color-light);
+    text-align: center;
+}
+
+.footer-links ul, .footer-contact ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-links li,
+.footer-contact li {
+    margin-bottom: var(--space-sm);
+    display: flex;
+    align-items: center;
+    gap: var(--space-sm);
+}
+
+
+.footer-links a,
+.footer-contact a {
+    text-decoration: none;
+    color: var(--color-md-gray);
+    transition: color 0.3s ease;
+    text-transform: capitalize;
+}
+
+.footer-col p, .footer-col li{
+    font-size: 1rem;
+}
+
+.footer-links a:hover,
+.footer-contact a:hover {
+    color: var(--color-light);
+}
+
+.footer-address{
+    margin-left: 1rem;
+}
+
+.footer-address p {
+    margin-top: 1rem;
+}
+
+.footer-social {
+    display: flex;
+    gap: var(--space-md);
+    margin-bottom: 0.65rem;
+}
+
+.footer-social a{
+    font-size: 1.5rem;
+    color: var(--color-md-gray);
+    transition: color 0.3s ease;
+}
+
+.footer-social a:hover{
+    color: var(--color-light);
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: var(--space-lg);
+    border-top: var(--border-gray);
+    padding-top: var(--space-sm);
+    font-size: 0.85rem;
+    color: var(--color-gray);
+}
+
 
 /* ============== RESPONSIVIDADE ================= */
 
@@ -654,6 +822,7 @@ a {
 }
 
 @media (max-width: 768px) {
+
     .hamburger {
         display: block;
         margin-left: auto;
@@ -763,28 +932,44 @@ a {
 
 @media (max-width: 460px){
 
+    .banner-slider{
+        aspect-ratio: 12 / 9;
+    }
+
+    .banner-image{
+        aspect-ratio: 12 / 9;
+    }
+
     .header-socials{
         margin: 0 auto;
         gap: 2rem;
     }
 
     .banner-description{
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin-bottom: var(--space-xs);
         max-width: 100%;
     }
 
     .banner-btn{
         margin-top: var(--space-md);
-        font-size: 0.75rem;
+        font-size: 1rem;
     }
 }
 
 @media (max-width: 365px){
     .banner-description{
-        font-size: 1rem;
+        font-size: 1.5rem;
         margin-bottom: var(--space-xs);
         max-width: 100%;
+    }
+
+    .banner-slider{
+        aspect-ratio: 10 / 8;
+    }
+
+    .banner-image{
+        aspect-ratio: 10 / 8;
     }
 }
 
