--- a/djangoweb/website/templates/website/base.html
+++ b/djangoweb/website/templates/website/base.html
@@ -16,5 +16,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
     <script src="{% static 'website/js/header.js' %}"></script>
     <script src="{% static 'website/js/banners.js' %}"></script>
+    <script src="{% static 'website/js/whatsapp.js' %}"></script>
 </body>
 </html>
