--- a/djangoweb/website/templates/website/partials/_header.html
+++ b/djangoweb/website/templates/website/partials/_header.html
@@ -7,7 +7,7 @@
                 <img src="{{ site_setup.favicon.url }}" alt="Logo Gazil Equipamentos">
             </a>
             <a href="{% url "website:home" %}" class="logo-text">
-                Gazil Equipamentos
+                {{ site_setup.title }}
             </a>
         </div>
 
