--- a/djangoweb/website/templates/website/partials/_whatsapp.html
+++ b/djangoweb/website/templates/website/partials/_whatsapp.html
@@ -1,10 +1,15 @@
-{% if site_setup.whatsapp_number and site_setup.whatsapp_message %}
-    <a href="http://wa.me/{{ site_setup.whatsapp_number }}?text={{ site_setup.whatsapp_message|urlencode }}" 
-    class="whatsapp-float" 
-    target="_blank" 
-    rel="noopener noreferrer" 
-    aria-label="Fale conosco no Whatsapp">
-        <img src="{{ site_setup.whatsapp_icon.url }}" alt="Whatsapp">
+{% if site_setup.whatsapp_number %}
 
-    </a>
+    <div class="whatsapp-float pulse" id="whatsappFloat">
+        <a href="http://wa.me/{{ site_setup.whatsapp_number }}?text="
+        target="_blank"
+        rel="noopener noreferrer"
+        aria-label="Fale conosco no Whatsapp">
+            <img src="{{ site_setup.whatsapp_icon.url }}" alt="Whatsapp">
+
+        </a>
+        <div class="whatsapp-tooltip" id="whatsappTooltip">
+            Precisa de ajuda?
+        </div>
+    </div>
 {% endif %}
