--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -25,7 +25,7 @@
 
     /* BORDAS */
 
-    --border-radius: 8px;    /* Cantos arredondados */
+    --border-radius: 0.5rem;    /* Cantos arredondados */
     --border-gray: 1px solid var(--color-gray);
 
     /* SOMBRAS */
@@ -115,7 +115,7 @@ a {
     color: var(--color-white);
     padding: var(--space-sm) var(--space-md);
     border-radius: var(--border-radius);
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-family: var(--font-body);
     box-shadow: var(--shadow-md);
     opacity: 0;
@@ -283,7 +283,8 @@ a {
 .dropdown-parent:hover .dropdown-toggle::after {
     transform: rotate(45deg);
     margin-bottom: 3px;
-    border-right: 2px solid var(--color-secondary);border-bottom: 2px solid var(--color-secondary);
+    border-right: 2px solid var(--color-secondary);
+    border-bottom: 2px solid var(--color-secondary);
 }
 
 .dropdown-parent:hover .nav-link{
@@ -485,7 +486,6 @@ a {
     color: var(--color-white);
     padding: var(--space-sm) var(--space-md);
     font-weight: bold;
-    border-radius: var(--border-radius);
     text-transform: uppercase;
     transition: background 0.4s;
     border-radius: var(--border-radius);
@@ -762,11 +762,22 @@ a {
 
 @media (max-width: 1025px) {
 
+    .whatsapp-float{
+        right: 15px;
+    }
+
+    .whatsapp-tooltip::after{
+        left: 74%;
+    }
+
+    .whatsapp-tooltip{
+        left: 5%;
+    }
+
     .dropdown-parent:hover .dropdown-toggle::after {
         transform: rotate(45deg);
         margin-bottom: 3px;
-        border-right: 2px solid var(--color-primary);
-        border-bottom: 2px solid var(--color-primary);
+        border-color: var(--color-secondary);
     }
 
     .dropdown-parent:hover .dropdown-menu{
@@ -789,15 +800,9 @@ a {
         margin-bottom: 3px;
         width: 8px;
         height: 8px;
-        border-right: 2px solid var(--color-primary);
-        border-bottom: 2px solid var(--color-primary);
+        border-color: var(--color-primary);
         transform: rotate(45deg);
         transition: transform 0.3s;
-    }
-
-    .dropdown-parent:hover .dropdown-toggle::after{
-        border-right: 2px solid var(--color-secondary);
-        border-bottom: 2px solid var(--color-secondary);
     }
 
     .banner-slider{
