--- a/djangoweb/website/static/website/css/style.css
+++ b/djangoweb/website/static/website/css/style.css
@@ -69,6 +69,8 @@ a {
     color: inherit;
 }
 
+/* ============== TEMPLATE BASE =================== */
+
 /* ======= WHATSAPP ICON ======== */
 .whatsapp-float{
     position: fixed;
@@ -228,7 +230,7 @@ a {
     color: var(--color-secondary);
 }
 
-/* == Dropdown navbar Produtos == */
+/* ======= Dropdown navbar Produtos ======= */
 
 .dropdown-parent{
     position: relative;
@@ -416,6 +418,226 @@ a {
     color: var(--color-secondary);
 }
 
+/* ======= FOOTER ======== */
+
+.footer{
+    background-color: var(--color-dark);
+    color: var(--color-md-gray);
+    padding: var(--space-xl) var(--space-md) var(--space-md);
+    font-size: 1rem;
+    font-family: var(--font-body);
+}
+
+.footer-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    gap: var(--space-lg);
+}
+
+.footer-col h3 {
+    font-family: var(--font-title);
+    color: var(--color-light);
+    margin-bottom: var(--space-sm);
+    font-size: 1.5rem;
+}
+
+.footer-logo-img{
+    width: 120px;
+    height: auto;
+    margin: auto;
+}
+
+.footer-logo{
+    font-size: 1.5rem;
+    font-family: var(--font-title);
+    color: var(--color-light);
+    text-align: center;
+}
+
+.footer-links ul, .footer-contact ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-links li,
+.footer-contact li {
+    margin-bottom: var(--space-sm);
+    display: flex;
+    align-items: center;
+    gap: var(--space-sm);
+}
+
+
+.footer-links a,
+.footer-contact a {
+    text-decoration: none;
+    color: var(--color-md-gray);
+    transition: color 0.3s ease;
+    text-transform: capitalize;
+}
+
+.footer-col p, .footer-col li{
+    font-size: 1rem;
+}
+
+.footer-links a:hover,
+.footer-contact a:hover {
+    color: var(--color-light);
+}
+
+.footer-address{
+    margin-left: 1rem;
+}
+
+.footer-address p {
+    margin-top: 1rem;
+}
+
+.footer-social {
+    display: flex;
+    gap: var(--space-md);
+    margin-bottom: 0.65rem;
+}
+
+.footer-social a{
+    font-size: 1.5rem;
+    color: var(--color-md-gray);
+    transition: color 0.3s ease;
+}
+
+.footer-social a:hover{
+    color: var(--color-light);
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: var(--space-lg);
+    border-top: var(--border-gray);
+    padding-top: var(--space-sm);
+    font-size: 0.85rem;
+    color: var(--color-gray);
+}
+
+/* ============== RESPONSIVIDADE(TEMPLATE BASE) ============== */
+
+@media (max-width: 1025px) {
+
+    .whatsapp-float{
+        right: 15px;
+    }
+
+    .whatsapp-tooltip::after{
+        left: 74%;
+    }
+
+    .whatsapp-tooltip{
+        left: 5%;
+    }
+
+    /* ====  HEADER(PRODUTOS) ==== */
+
+    .dropdown-parent:hover .dropdown-toggle::after {
+        transform: rotate(45deg);
+        margin-bottom: 3px;
+        border-color: var(--color-secondary);
+    }
+
+    .dropdown-parent:hover .dropdown-menu{
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(10px);
+    }
+
+    .dropdown-parent .dropdown-menu.open{
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+        pointer-events: auto;
+    }
+
+    .dropdown-toggle::after {
+        content: "";
+        display: inline-block;
+        margin-left: 4px;
+        margin-bottom: 3px;
+        width: 8px;
+        height: 8px;
+        border-color: var(--color-primary);
+        transform: rotate(45deg);
+        transition: transform 0.3s;
+    }
+}
+
+@media (max-width: 768px) {
+
+    /* ==== HEADER + MENU DROPDOWN(HAMBURGUER) ==== */
+
+    .hamburger {
+        display: block;
+        margin-left: auto;
+    }
+
+    .header-socials{
+        display: flex;
+        justify-content: center;
+        gap: 2rem;
+        padding: 1rem 0;
+        margin-right: 4rem;
+    }
+
+    .header-socials a,
+    .mobile-socials a {
+        font-size: 2rem;
+    }
+
+
+    .nav-desktop .menu {
+        display: none; 
+    }
+
+    .container {
+        width: 100%;
+        padding: 10px 0;
+    }
+
+    .logo {
+        display: flex;
+        align-items: center;
+        margin-left: 2rem;
+    }
+
+    .logo-img {
+        display: block;
+    }
+
+    .nav-mobile .dropdown-menu {
+        position: relative;
+        box-shadow: none;
+        margin-top: var(--space-xs);
+        display: none;
+    }
+
+    .nav-mobile .dropdown-menu a{
+        line-height: 2.2;
+    }
+
+    .dropdown-menu.open{
+        display: block;
+    }
+
+    .nav-mobile[data-visible="true"] .menu-mobile{
+        opacity: 1;
+        transform: translateY(0);
+        pointer-events: auto;
+    }
+}
+
+
+/* ------ FINISH TEMPLATE BASE ------- */
+
+
+/* ============ TEMPLATE HOME =========== */
 
 /* ===== BANNER ===== */
 
@@ -457,7 +679,7 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -611,7 +833,8 @@ a {
     background-color: #a80320;
 }
 
-/* ===== WHY GAZIL SECTION ===== */
+/* ======= WHY GAZIL SECTION ======= */
+
 .why-gazil{
     padding: 4rem 2rem;
 }
@@ -656,154 +879,11 @@ a {
     line-height: 1.5;
 }
 
-/* ======= FOOTER ======== */
-
-.footer{
-    background-color: var(--color-dark);
-    color: var(--color-md-gray);
-    padding: var(--space-xl) var(--space-md) var(--space-md);
-    font-size: 1rem;
-    font-family: var(--font-body);
-}
-
-.footer-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-    gap: var(--space-lg);
-}
-
-.footer-col h3 {
-    font-family: var(--font-title);
-    color: var(--color-light);
-    margin-bottom: var(--space-sm);
-    font-size: 1.5rem;
-}
-
-.footer-logo-img{
-    width: 120px;
-    height: auto;
-    margin: auto;
-}
-
-.footer-logo{
-    font-size: 1.5rem;
-    font-family: var(--font-title);
-    color: var(--color-light);
-    text-align: center;
-}
-
-.footer-links ul, .footer-contact ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.footer-links li,
-.footer-contact li {
-    margin-bottom: var(--space-sm);
-    display: flex;
-    align-items: center;
-    gap: var(--space-sm);
-}
-
-
-.footer-links a,
-.footer-contact a {
-    text-decoration: none;
-    color: var(--color-md-gray);
-    transition: color 0.3s ease;
-    text-transform: capitalize;
-}
-
-.footer-col p, .footer-col li{
-    font-size: 1rem;
-}
-
-.footer-links a:hover,
-.footer-contact a:hover {
-    color: var(--color-light);
-}
-
-.footer-address{
-    margin-left: 1rem;
-}
-
-.footer-address p {
-    margin-top: 1rem;
-}
-
-.footer-social {
-    display: flex;
-    gap: var(--space-md);
-    margin-bottom: 0.65rem;
-}
-
-.footer-social a{
-    font-size: 1.5rem;
-    color: var(--color-md-gray);
-    transition: color 0.3s ease;
-}
-
-.footer-social a:hover{
-    color: var(--color-light);
-}
-
-.footer-bottom {
-    text-align: center;
-    margin-top: var(--space-lg);
-    border-top: var(--border-gray);
-    padding-top: var(--space-sm);
-    font-size: 0.85rem;
-    color: var(--color-gray);
-}
-
-
-/* ============== RESPONSIVIDADE ================= */
+/* ============== RESPONSIVIDADE(TEMPLATE HOME) ================ */
 
 @media (max-width: 1025px) {
 
-    .whatsapp-float{
-        right: 15px;
-    }
-
-    .whatsapp-tooltip::after{
-        left: 74%;
-    }
-
-    .whatsapp-tooltip{
-        left: 5%;
-    }
-
-    .dropdown-parent:hover .dropdown-toggle::after {
-        transform: rotate(45deg);
-        margin-bottom: 3px;
-        border-color: var(--color-secondary);
-    }
-
-    .dropdown-parent:hover .dropdown-menu{
-        opacity: 0;
-        visibility: hidden;
-        transform: translateY(10px);
-    }
-
-    .dropdown-parent .dropdown-menu.open{
-        opacity: 1;
-        visibility: visible;
-        transform: translateY(0);
-        pointer-events: auto;
-    }
-
-    .dropdown-toggle::after {
-        content: "";
-        display: inline-block;
-        margin-left: 4px;
-        margin-bottom: 3px;
-        width: 8px;
-        height: 8px;
-        border-color: var(--color-primary);
-        transform: rotate(45deg);
-        transition: transform 0.3s;
-    }
+    /* ==== BANNER ==== */
 
     .banner-slider{
         aspect-ratio: 17 / 6;
@@ -828,65 +908,6 @@ a {
 
 @media (max-width: 768px) {
 
-    .hamburger {
-        display: block;
-        margin-left: auto;
-    }
-
-    .header-socials{
-        display: flex;
-        justify-content: center;
-        gap: 2rem;
-        padding: 1rem 0;
-        margin-right: 4rem;
-    }
-
-    .header-socials a,
-    .mobile-socials a {
-        font-size: 2rem;
-    }
-
-
-    .nav-desktop .menu {
-        display: none; 
-    }
-
-    .container {
-        width: 100%;
-        padding: 10px 0;
-    }
-
-    .logo {
-        display: flex;
-        align-items: center;
-        margin-left: 2rem;
-    }
-
-    .logo-img {
-        display: block;
-    }
-
-    .nav-mobile .dropdown-menu {
-        position: relative;
-        box-shadow: none;
-        margin-top: var(--space-xs);
-        display: none;
-    }
-
-    .nav-mobile .dropdown-menu a{
-        line-height: 2.2;
-    }
-
-    .dropdown-menu.open{
-        display: block;
-    }
-
-    .nav-mobile[data-visible="true"] .menu-mobile{
-        opacity: 1;
-        transform: translateY(0);
-        pointer-events: auto;
-    }
-
     /* ==== BANNER ==== */
 
     .banner-slider{
@@ -909,6 +930,8 @@ a {
 }
 
 @media (max-width: 600px) {
+
+    /* ====== BANNER ====== */
 
     .banner-slider{
         aspect-ratio: 14 / 8;
@@ -937,6 +960,8 @@ a {
 
 @media (max-width: 460px){
 
+    /* ====== BANNER ====== */
+
     .banner-slider{
         aspect-ratio: 12 / 9;
     }
@@ -963,6 +988,9 @@ a {
 }
 
 @media (max-width: 365px){
+
+    /* ====== BANNER ====== */
+
     .banner-description{
         font-size: 1.5rem;
         margin-bottom: var(--space-xs);
@@ -977,4 +1005,9 @@ a {
         aspect-ratio: 10 / 8;
     }
 }
+
+/* ------ FINISH TEMPLATE HOME ------ */
+
+
+/* ============== TEMPLATE CONTATOS =============== */
 
